2주차 과제 완

--- a/src/w2/sketches/sketch8/index.html
+++ b/src/w2/sketches/sketch8/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 W2 Sketch5</title>
+    <title>김예원 W2 Sketch9</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../../../plugin/prism/prism.css" />
     <script src="../../../../plugin/prism/prism.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
+    <script src="../../../../script/p5Util.js" defer></script>
     <script src="./script/sketch.js" defer></script>
     <script src="../../../example/" defer></script>
   </head>
@@ -19,7 +20,9 @@
     <div class="viewport">
       <main>
         <section>
-          <div class="container"></div>
+          <div class="container">
+            <div id="canvas-goes-here"></div>
+          </div>
         </section>
       </main>
       <footer>
