--- a/src/w2/assignment/basic/index.html
+++ b/src/w2/assignment/basic/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 W2 Sketch5</title>
+    <title>김예원 W2 assignment</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -12,14 +12,22 @@
     <link rel="stylesheet" href="../../../../plugin/prism/prism.css" />
     <script src="../../../../plugin/prism/prism.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
-    <script src="./script/sketch.js" defer></script>
-    <script src="../../../example/" defer></script>
+    <script src="../../../../script/p5Util.js" defer></script>
+    <script src="./script/room.js" defer></script>
+    <style>
+      #canvas-goes-here {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div class="viewport">
       <main>
         <section>
-          <div class="container"></div>
+          <div class="container">
+            <div id="canvas-goes-here"></div>
+          </div>
         </section>
       </main>
       <footer>
@@ -29,6 +37,11 @@
             <pre
               class="line-numbers"
               data-src="./index.html"
+              data-download-link></pre>
+            <h6>room.js</h6>
+            <pre
+              class="line-numbers"
+              data-src="./script/room.js"
               data-download-link></pre>
           </div>
         </section>
