--- a/src/w2/sketches/sketch9/index.html
+++ b/src/w2/sketches/sketch9/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 W2 Sketch5</title>
+    <title>김예원 W2 Sketch9</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -11,24 +11,30 @@
     <link rel="stylesheet" href="../../../../style/style.css" />
     <link rel="stylesheet" href="../../../../plugin/prism/prism.css" />
     <script src="../../../../plugin/prism/prism.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
-    <script src="./script/sketch.js" defer></script>
-    <script src="../../../example/" defer></script>
+    <script src="./script/consolelog.js"></script>
   </head>
   <body>
     <div class="viewport">
       <main>
         <section>
-          <div class="container"></div>
+          <div class="container">
+            <h1>김예원 W2 Sketch9</h1>
+          </div>
         </section>
       </main>
       <footer>
         <section>
           <div class="container">
+            <h2>코드</h2>
             <h6>index.html</h6>
             <pre
               class="line-numbers"
               data-src="./index.html"
+              data-download-link></pre>
+            <h6>consolelog.js</h6>
+            <pre
+              class="line-numbers"
+              data-src="./script/console.js"
               data-download-link></pre>
           </div>
         </section>
