--- a/src/w3/index.html
+++ b/src/w3/index.html
@@ -22,31 +22,40 @@
       <main>
         <section>
           <div class="container">
-            <h3>현장수업</h3>
+            <h3>Week3</h3>
             <ul>
               <li>
-                <a href="./sketches/sketch1/index.html">스케치1</a>
+                <a href="./sketches/sketch1/index.html">수업1</a>
               </li>
               <li>
-                <a href="./sketches/sketch2/index.html">스케치2</a>
+                <a href="./sketches/sketch2/index.html">수업2</a>
               </li>
               <li>
-                <a href="./sketches/sketch3/index.html">스케치3</a>
+                <a href="./sketches/sketch3/index.html">유튜브1</a>
               </li>
               <li>
-                <a href="./sketches/sketch4/index.html">스케치4</a>
+                <a href="./sketches/sketch4/index.html">유튜브2</a>
               </li>
               <li>
-                <a href="./sketches/sketch5/index.html">스케치5</a>
+                <a href="./sketches/sketch5/index.html">유튜브3</a>
               </li>
               <li>
-                <a href="./sketches/sketch6/index.html">스케치6</a>
+                <a href="./sketches/sketch6/index.html">유튜브4</a>
               </li>
               <li>
-                <a href="./sketches/sketch7/index.html">스케치7</a>
+                <a href="./sketches/sketch7/index.html">유튜브5</a>
               </li>
               <li>
-                <a href="./sketches/sketch8/index.html">스케치8</a>
+                <a href="./sketches/sketch8/index.html">유튜브6</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch9/index.html">유튜브7</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch10/index.html">유튜브8</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch11/index.html">유튜브9</a>
               </li>
             </ul>
           </div>
@@ -56,10 +65,13 @@
             <h3>과제</h3>
             <ul>
               <li>
-                <a href="./assignment/basic/index.html">기본</a>
+                <a href="./assignment/step1/index.html">step1</a>
               </li>
               <li>
-                <a href="./assignment/advance/index.html">심화</a>
+                <a href="./assignment/step2/index.html">step2</a>
+              </li>
+              <li>
+                <a href="./assignment/step3/index.html">step3</a>
               </li>
             </ul>
           </div>
