--- a/src/w3/assignment/step3/index.html
+++ b/src/w3/assignment/step3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 W3 유튜브영상4</title>
+    <title>김예원 W3 assignment</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
