--- a/src/w4/sketches/sketch1/index.html
+++ b/src/w4/sketches/sketch1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 W4 유튜브영상1</title>
+    <title>김예원 W4 수업1</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
