--- a/src/w4/sketches/sketch3/index.html
+++ b/src/w4/sketches/sketch3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 W4 과제2</title>
+    <title>김예원 W4 유튜브1</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
     <script src="../../../../script/p5Util.js" defer></script>
     <script src="./script/Attractor.js" defer></script>
-    <script src="./script/Mover.js" defer></script>
+    <script src="./script/MoverNoMass.js" defer></script>
     <script src="./script/sketch.js" defer></script>
   </head>
   <body>
@@ -22,7 +22,7 @@
       <main>
         <section>
           <div class="container">
-            <div id="canvas"></div>
+            <div id="mysketch"></div>
           </div>
         </section>
       </main>
