--- a/src/w4/sketches/sketch4/index.html
+++ b/src/w4/sketches/sketch4/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 W4 과제2</title>
+    <title>김예원 W4 유튜브1</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -22,7 +22,7 @@
       <main>
         <section>
           <div class="container">
-            <div id="canvas"></div>
+            <div id="mysketch"></div>
           </div>
         </section>
       </main>
