--- a/src/w4/assignment/step2/index.html
+++ b/src/w4/assignment/step2/index.html
@@ -13,9 +13,8 @@
     <script src="../../../../plugin/prism/prism.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
     <script src="../../../../script/p5Util.js" defer></script>
-    <script src="./script/Attractor.js" defer></script>
-    <script src="./script/Mover.js" defer></script>
     <script src="./script/sketch.js" defer></script>
+    <script src="./script/Mover.js" defer></script>
   </head>
   <body>
     <div class="viewport">
@@ -38,6 +37,11 @@
             <pre
               class="line-numbers"
               data-src="./script/sketch.js"
+              data-download-link></pre>
+            <h6>Mover.js</h6>
+            <pre
+              class="line-numbers"
+              data-src="./script/Mover.js"
               data-download-link></pre>
           </div>
         </section>
