--- a/src/w5/sketches/sketch1/index.html
+++ b/src/w5/sketches/sketch1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 W4 과제1</title>
+    <title>김예원 W5 유튜브</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -13,15 +13,15 @@
     <script src="../../../../plugin/prism/prism.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
     <script src="../../../../script/p5Util.js" defer></script>
-    <script src="./script/nBodiesAttraction.js" defer></script>
-    <script src="./script/Body.js" defer></script>
+    <script src="./script/Mover.js" defer></script>
+    <script src="./script/sketch.js" defer></script>
   </head>
   <body>
     <div class="viewport">
       <main>
         <section>
           <div class="container">
-            <div id="canvas"></div>
+            <div id="mysketch"></div>
           </div>
         </section>
       </main>
@@ -33,15 +33,10 @@
               class="line-numbers"
               data-src="./index.html"
               data-download-link></pre>
-            <h6>body.js</h6>
+            <h6>sketch.js</h6>
             <pre
               class="line-numbers"
-              data-src="./script/body.js"
-              data-download-link></pre>
-            <h6>nBodiesAttraction.js</h6>
-            <pre
-              class="line-numbers"
-              data-src="./script/nBodiesAttraction.js"
+              data-src="./script/sketch.js"
               data-download-link></pre>
           </div>
         </section>
