--- a/src/w5/assignment/step1/index.html
+++ b/src/w5/assignment/step1/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
     <script src="../../../../script/p5Util.js" defer></script>
     <script src="./script/sketch.js" defer></script>
+    <!-- <script src="./script/sketch1.js" defer></script> -->
   </head>
   <body>
     <div class="viewport">
