--- a/src/w4/assignment/step1/index.html
+++ b/src/w4/assignment/step1/index.html
@@ -36,7 +36,7 @@
             <h6>body.js</h6>
             <pre
               class="line-numbers"
-              data-src="./script/body.js"
+              data-src="./script/Body.js"
               data-download-link></pre>
             <h6>nBodiesAttraction.js</h6>
             <pre
