--- a/src/w5/assignment/step2/index.html
+++ b/src/w5/assignment/step2/index.html
@@ -39,6 +39,11 @@
               class="line-numbers"
               data-src="./script/sketch.js"
               data-download-link></pre>
+            <h6>Pendulum.js</h6>
+            <pre
+              class="line-numbers"
+              data-src="./script/Pendulum.js"
+              data-download-link></pre>
           </div>
         </section>
       </footer>
