--- a/src/w6/assignment/step1/index.html
+++ b/src/w6/assignment/step1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 W6 유튜브3</title>
+    <title>김예원 W6 과제1</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -29,11 +29,6 @@
       <footer>
         <section>
           <div class="container">
-            <h6>index.html</h6>
-            <pre
-              class="line-numbers"
-              data-src="./index.html"
-              data-download-link></pre>
             <h6>sketch.js</h6>
             <pre
               class="line-numbers"
