김예원_10.23일 과제

--- a/src/w6/index.html
+++ b/src/w6/index.html
@@ -45,6 +45,9 @@
               <li>
                 <a href="./sketches/sketch7/index.html">유튜브5</a>
               </li>
+              <li>
+                <a href="./sketches/sketch8/index.html">과제 수정전</a>
+              </li>
             </ul>
           </div>
         </section>
