--- a/src/w6/index.html
+++ b/src/w6/index.html
@@ -43,10 +43,7 @@
                 <a href="./sketches/sketch6/index.html">유튜브4</a>
               </li>
               <li>
-                <a href="./sketches/sketch7/index.html">유튜브5</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch8/index.html">과제 수정전</a>
+                <a href="./sketches/sketch7/index.html">과제_수정전</a>
               </li>
             </ul>
           </div>
