정리를 해보자

--- a/src/w5/index.html
+++ b/src/w5/index.html
@@ -25,25 +25,22 @@
             <h3>Week5</h3>
             <ul>
               <li>
-                <a href="./sketches/sketch1/index.html">유튜브1</a>
+                <a href="./sketches/sketch1/index.html">수업1</a>
               </li>
               <li>
-                <a href="./sketches/sketch2/index.html">유튜브2</a>
+                <a href="./sketches/sketch2/index.html">수업2</a>
               </li>
               <li>
-                <a href="./sketches/sketch3/index.html">유튜브3</a>
+                <a href="./sketches/sketch3/index.html">수업3</a>
               </li>
               <li>
-                <a href="./sketches/sketch4/index.html">유튜브4</a>
+                <a href="./sketches/sketch4/index.html">수업4</a>
               </li>
               <li>
-                <a href="./sketches/sketch5/index.html">유튜브5</a>
+                <a href="./sketches/sketch5/index.html">수업5</a>
               </li>
               <li>
-                <a href="./sketches/sketch6/index.html">유튜브6</a>
-              </li>
-              <li>
-                <a href="./sketches/sketch7/index.html">유튜브7</a>
+                <a href="./sketches/sketch6/index.html">수업6</a>
               </li>
             </ul>
           </div>
