--- a/src/w5/sketches/sketch2/index.html
+++ b/src/w5/sketches/sketch2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 W5 유튜브2</title>
+    <title>교수님 영상 step4</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
