--- a/src/w6/sketches/sketch4/index.html
+++ b/src/w6/sketches/sketch4/index.html
@@ -15,13 +15,14 @@
     <script src="../../../../script/p5Util.js" defer></script>
     <script src="./script/sketch.js" defer></script>
     <script src="./script/Particle.js" defer></script>
+    <script src="./script/Emitter.js" defer></script>
   </head>
   <body>
     <div class="viewport">
       <main>
         <section>
           <div class="container">
-            <div id="mysketch"></div>
+            <div id="canvas"></div>
           </div>
         </section>
       </main>
