--- a/src/w6/sketches/sketch5/index.html
+++ b/src/w6/sketches/sketch5/index.html
@@ -22,7 +22,7 @@
       <main>
         <section>
           <div class="container">
-            <div id="mysketch"></div>
+            <div id="canvas"></div>
           </div>
         </section>
       </main>
