--- a/src/w7/sketches/sketch1/index.html
+++ b/src/w7/sketches/sketch1/index.html
@@ -21,7 +21,7 @@
       <main>
         <section>
           <div class="container">
-            <div id="mysketch"></div>
+            <div id="canvas"></div>
           </div>
         </section>
       </main>
