--- a/src/w8/index.html
+++ b/src/w8/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 Week6</title>
+    <title>김예원 Week7</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -15,14 +15,14 @@
       <header>
         <section>
           <div class="container">
-            <h1>김예원 Week6</h1>
+            <h1>김예원 Week7</h1>
           </div>
         </section>
       </header>
       <main>
         <section>
           <div class="container">
-            <h3>Week6</h3>
+            <h3>Week7</h3>
             <ul>
               <li>
                 <a href="./sketches/sketch1/index.html">수업1</a>
@@ -31,20 +31,16 @@
                 <a href="./sketches/sketch2/index.html">수업2</a>
               </li>
               <li>
-                <a href="./sketches/sketch3/index.html">유튜브1</a>
+                <a href="./sketches/sketch3/index.html">수업3</a>
               </li>
               <li>
-                <a href="./sketches/sketch4/index.html">
-                  A Single Particle Emitter
-                </a>
+                <a href="./sketches/sketch4/index.html">수업4</a>
               </li>
               <li>
-                <a href="./sketches/sketch5/index.html">
-                  An Image Texture Particle System
-                </a>
+                <a href="./sketches/sketch5/index.html">유튜브3</a>
               </li>
               <li>
-                <a href="./sketches/sketch7/index.html">과제_수정전</a>
+                <a href="./sketches/sketch6/index.html">유튜브4</a>
               </li>
             </ul>
           </div>
