--- a/src/like/index.html
+++ b/src/like/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 Week3</title>
+    <title>코드 모음</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -15,57 +15,44 @@
       <header>
         <section>
           <div class="container">
-            <h1>김예원 Week3</h1>
+            <h1>코드 모아보자</h1>
           </div>
         </section>
       </header>
       <main>
         <section>
           <div class="container">
-            <h3>Week3</h3>
+            <h3>스케치</h3>
             <ul>
               <li>
-                <a href="./sketches/sketch1/index.html">수업1</a>
+                <a href="./sketches/sketch1/index.html">스케치1</a>
               </li>
               <li>
-                <a href="./sketches/sketch2/index.html">수업2</a>
+                <a href="./sketches/sketch2/index.html">스케치2</a>
               </li>
               <li>
-                <a href="./sketches/sketch3/index.html">유튜브1</a>
+                <a href="./sketches/sketch3/index.html">스케치3</a>
               </li>
               <li>
-                <a href="./sketches/sketch4/index.html">유튜브2</a>
+                <a href="./sketches/sketch4/index.html">스케치4</a>
               </li>
               <li>
-                <a href="./sketches/sketch5/index.html">유튜브3</a>
+                <a href="./sketches/sketch5/index.html">스케치5</a>
               </li>
               <li>
-                <a href="./sketches/sketch6/index.html">유튜브4</a>
+                <a href="./sketches/sketch6/index.html">스케치6</a>
               </li>
               <li>
-                <a href="./sketches/sketch7/index.html">유튜브5</a>
+                <a href="./sketches/sketch7/index.html">스케치7</a>
               </li>
               <li>
-                <a href="./sketches/sketch8/index.html">유튜브6</a>
+                <a href="./sketches/sketch8/index.html">스케치8</a>
               </li>
               <li>
-                <a href="./sketches/sketch9/index.html">유튜브7</a>
-              </li>
-            </ul>
-          </div>
-        </section>
-        <section>
-          <div class="container">
-            <h3>과제</h3>
-            <ul>
-              <li>
-                <a href="./assignment/step1/index.html">step1</a>
+                <a href="./sketches/sketch9/index.html">스케치9</a>
               </li>
               <li>
-                <a href="./assignment/step2/index.html">step2</a>
-              </li>
-              <li>
-                <a href="./assignment/step3/index.html">step3</a>
+                <a href="./sketches/sketch10/index.html">스케치10</a>
               </li>
             </ul>
           </div>
