--- a/src/w7/sketches/sketch2/index.html
+++ b/src/w7/sketches/sketch2/index.html
@@ -13,7 +13,6 @@
     <script src="../../../../plugin/prism/prism.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
     <script src="../../../../script/p5Util.js" defer></script>
-    <script src="./script/Traffic.js" defer></script>
     <script src="./script/Vehicle.js" defer></script>
     <script src="./script/sketch.js" defer></script>
   </head>
@@ -22,7 +21,7 @@
       <main>
         <section>
           <div class="container">
-            <div id="mysketch"></div>
+            <div id="canvas"></div>
           </div>
         </section>
       </main>
