--- a/src/w7/sketches/sketch1/index.html
+++ b/src/w7/sketches/sketch1/index.html
@@ -33,10 +33,10 @@
               class="line-numbers"
               data-src="./script/sketch.js"
               data-download-link></pre>
-            <h6>Particle.js</h6>
+            <h6>Vehicle.js</h6>
             <pre
               class="line-numbers"
-              data-src="./script/Particle.js"
+              data-src="./script/Vehicle.js"
               data-download-link></pre>
             <h6>Emitter.js</h6>
             <pre
