--- a/src/w7/index.html
+++ b/src/w7/index.html
@@ -52,6 +52,9 @@
               <li>
                 <a href="./assignment/step1/index.html">step1</a>
               </li>
+              <li>
+                <a href="./assignment/step2/index.html">step2</a>
+              </li>
             </ul>
           </div>
         </section>
