--- a/src/w9/index.html
+++ b/src/w9/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김예원 Week7</title>
+    <title>김예원 Week9</title>
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
@@ -15,20 +15,26 @@
       <header>
         <section>
           <div class="container">
-            <h1>김예원 Week8</h1>
+            <h1>김예원 Week9</h1>
           </div>
         </section>
       </header>
       <main>
         <section>
           <div class="container">
-            <h3>Week8</h3>
+            <h3>Week9</h3>
             <ul>
               <li>
                 <a href="./sketches/sketch1/index.html">수업1</a>
               </li>
               <li>
-                <a href="./sketches/sketch2/index.html">유튜브</a>
+                <a href="./sketches/sketch2/index.html">수업2</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch3/index.html">수업3</a>
+              </li>
+              <li>
+                <a href="./sketches/sketch4/index.html">수업4</a>
               </li>
             </ul>
           </div>
